--- a/Algo_data_structures.ipynb
+++ b/Algo_data_structures.ipynb
@@ -345,30 +345,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "e90648f4",
+   "cell_type": "markdown",
+   "id": "771c34a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "starting...\n",
-      "done.\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52053d22",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "Test."
    ]
   }
  ],
